      \code{"2":"5"} and \code{seq.int()}.

      \item \code{seq.int(to=1, by=1)} is now correct, other cases are
      integer (instead of \code{double}) when \code{seq()} is integer
      too, and the "non-finite" error messages are consistent between
      \code{seq.default()} and \code{seq.int()}, no longer mentioning
      \code{NaN} etc.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.3.2 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The internal methods of \code{download.file()} and
      \code{url()} now report if they are unable to follow the
      redirection of a \samp{http://} URL to a \samp{https://} URL
      (rather than failing silently).
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item The check for the zlib version is now robust to versions
      longer than 5 characters, including 1.2.10.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item Environmental variable \env{_R_CHECK_TESTS_NLINES_} controls
      how \command{R CMD check} reports failing tests (see §8 of the
      \sQuote{R Internals} manual).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{rep(x, times)} and \code{rep.int(x, times)} now both
      work also when \code{times} is larger than the maximal integer,
      including when it is of length greater than one. (\PR{16932})

      \item \code{vapply(x, *)} now works with long vectors \code{x}.
      (\PR{17174})

      \item \code{isS3method("is.na.data.frame")} and similar are
      correct now.  (\PR{17171})

      \item \code{grepRaw(<long>, <short>, fixed = TRUE)} now works,
      thanks to a patch by Mikko Korpela.  (\PR{17132})

      \item Package installation into a library where the package exists
      via symbolic link now should work wherever \code{\link{Sys.readlink}()}
      works, resolving \PR{16725}.

      \item \code{"Cincinnati"} was missing an \code{"n"} in the
      \code{precip} dataset.
